opam-version: "2.0"
synopsis: "LP and MIP modeling in OCaml (HiGHS interface)"
description: """
This library helps the modeling of Linear Programming (LP) and Mixed Integer Programming (MIP) in OCaml.
This package is an optional solver-interface to HiGHS.
"""
maintainer: "Kosuke Tahara <ksk.tahara@gmail.com>"
authors: [ "Jin Sano <sano@ueda.info.waseda.ac.jp>"  "Kosuke Tahara <ksk.tahara@gmail.com>" ]
license: "MIT"
homepage: "https://github.com/ktahar/ocaml-lp"
bug-reports: "https://github.com/ktahar/ocaml-lp/issues"
dev-repo: "git+https://github.com/ktahar/ocaml-lp.git"
version: "0.4.0"
depends: [
    "ocaml" {>= "4.08.0"}
    "dune" {>= "2.2.0"}
    "lp" {= version}
]
build: [
    [ "dune" "build" "-p" name "-j" jobs ]
    [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]
