opam-version: "2.0"
version: "0.0.2"
synopsis: "LP and MIP modeling in OCaml"
description: """
This library helps the modeling of Linear Programming (LP) and Mixed Integer Programming (MIP) in OCaml.
The model can be imported-from / exported-to CPLEX LP file format, which can be loaded by various solvers.
It also has an interface to GLPK (GNU Linear Programming Kit).
"""
maintainer: "Kosuke Tahara <ksk.tahara@gmail.com>"
authors: [ "Kosuke Tahara <ksk.tahara@gmail.com>" ]
license: "MIT"
homepage: "https://github.com/ktahar/ocaml-lp"
bug-reports: "https://github.com/ktahar/ocaml-lp/issues"
dev-repo: "git+https://github.com/ktahar/ocaml-lp.git"
depends: [
    "ocaml" {>= "4.08.0"}
    "dune"  {>= "2.2.0"}
    "ctypes"
    "ctypes-foreign"
    "menhir"
    "alcotest" {with-test}
    "conf-glpk" {with-test}
]
build: [
    [ "dune" "build" "-p" name "-j" jobs ]
    [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]
