(executable
 (name test_glpk_js)
 (modes js)
 (libraries lp lp-glpk-js alcotest))

(rule
 (alias runtest_lp_glpk_js)
 (deps
  test_glpk_js.bc.js
  node_modules/glpk.js/package.json
  node_modules/glpk.js/dist/glpk.js
  node_modules/glpk.js/dist/glpk.wasm
  (glob_files *.lp))
 (action
  (run node %{dep:test_glpk_js.bc.js})))
