(tests
 (package lp-glpk)
 (names
  test_glpk_ffi
  test_glpk
  test_nqueens
  test_iterlimit
  test_milp_feasible)
 (libraries alcotest lp lp-glpk)
 (preprocess
  (pps ppx_deriving.map ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
 (deps
  (glob_files *.lp))
 (action
  (run %{test} --color=always)))
