(rule
 (targets g.ml)
 (deps ../stubgen/ffi_ml_consts_stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps}))))

(library
 (name lp_glpk_consts)
 (public_name lp-glpk.consts)
 (flags :standard -w -9-27)
 (synopsis "Ctypes bindings that describe the libglpk FFI constants")
 (libraries lp-glpk.bindings.consts ctypes.stubs ctypes))
