(executable
 (name ffi_consts_stubgen)
 (modules ffi_consts_stubgen)
 (libraries lp-glpk.bindings.consts ctypes.stubs ctypes))

(rule
 (targets ffi_ml_consts_stubgen.c)
 (deps ./ffi_consts_stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps}))))

(rule
 (targets ffi_ml_consts_stubgen.exe)
 (deps
  (:c ./ffi_ml_consts_stubgen.c))
 (action
  (run %{cc} %{c} -I %{lib:ctypes:.} -I %{ocaml_where} -o %{targets})))
