(rule
 (targets g.ml)
 (deps ../stubgen/ffi_ml_types_stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps}))))

(library
 (name lp_highs_types)
 (public_name lp-highs.types)
 (flags :standard -w -9-27)
 (synopsis "Ctypes bindings that describe the libhighs C API types")
 (libraries lp-highs.bindings.types ctypes.stubs ctypes))
